1.8.0/_sources/Tutorials/Advanced/ParamEst/parameter_estimation_NRTL_using_unit_model_solution.rst.txt
Parameter Estimation Using Flash Unit Model
-------------------------------------------

In this module, we will be using Pyomo’s ``parmest`` tool in conjuction
with IDAES models for parameter estimation. We demonstrate these tools
by estimating the parameters associated with the NRTL property model for
a benzene-toluene mixture. The NRTL model has 2 sets of parameters: the
non-randomness parameter (``alpha_ij``) and the binary interaction
parameter (``tau_ij``), where ``i`` and ``j`` is the pure component
species. In this example, we will be only estimate the binary
interaction parameter (``tau_ij``) for a given dataset. When estimating
parameters associated with the property package, IDAES provides the
flexibility of doing the parameter estimation by just using the state
block or by using a unit model with a specified property package. This
module will demonstrate parameter estimation by using the flash unit
model with the NRTL property package.

We will complete the following tasks: \* Set up a method to return an
initialized model \* Set up the parameter estimation problem using
``parmest`` \* Analyze the results \* Demonstrate advanced features from
``parmest``

Key links to documentation:
---------------------------

-  NRTL Model - https://idaes-pse.readthedocs.io/en/stable/
-  parmest -
   https://pyomo.readthedocs.io/en/stable/contributed_packages/parmest/index.html

.. raw:: html

   <div class="alert alert-block alert-info">

Inline Exercise: import ``ConcreteModel`` from Pyomo, ``FlowsheetBlock``
and ``Flash`` from IDAES.

.. raw:: html

   </div>

.. code:: ipython3

    # Todo: import ConcreteModel from pyomo.environ
    from pyomo.environ import ConcreteModel, value
    
    # Todo: import FlowsheetBlock from idaes.core
    from idaes.core import FlowsheetBlock
    
    # Todo: import Flash unit model from idaes.generic_models.unit_models
    from idaes.generic_models.unit_models import Flash


In the next cell, we will be importing the parameter block that we will
be using in this module and the idaes logger.

.. code:: ipython3

    from idaes.generic_models.properties.activity_coeff_models.\
        BTX_activity_coeff_VLE import BTXParameterBlock
    import idaes.logger as idaeslog

In the next cell, we import ``parmest`` from Pyomo and the ``pandas``
package. We need ``pandas`` as ``parmest`` uses ``pandas.dataframe`` for
handling the input data and the results.

.. code:: ipython3

    import pyomo.contrib.parmest.parmest as parmest
    import pandas as pd

Setting up an initialized model
-------------------------------

We need to provide a method that returns an initialized model to the
``parmest`` tool in Pyomo.

.. raw:: html

   <div class="alert alert-block alert-info">

Inline Exercise: Using what you have learned from previous modules, fill
in the missing code below to return an initialized IDAES model.

.. raw:: html

   </div>

.. code:: ipython3

    def NRTL_model(data):
        
        #Todo: Create a ConcreteModel object
        m = ConcreteModel()
        
        #Todo: Create FlowsheetBlock object
        m.fs = FlowsheetBlock(default={"dynamic": False})
        
    
        #Todo: Create a properties parameter object with the following options:
        # "valid_phase": ('Liq', 'Vap')
        # "activity_coeff_model": 'NRTL'
        m.fs.properties = BTXParameterBlock(default={"valid_phase":
                                                     ('Liq', 'Vap'),
                                                     "activity_coeff_model":
                                                     'NRTL'})
        m.fs.flash = Flash(default={"property_package": m.fs.properties})
    
        # Initialize at a certain inlet condition
        m.fs.flash.inlet.flow_mol.fix(1)
        m.fs.flash.inlet.temperature.fix(368)
        m.fs.flash.inlet.pressure.fix(101325)
        m.fs.flash.inlet.mole_frac_comp[0, "benzene"].fix(0.5)
        m.fs.flash.inlet.mole_frac_comp[0, "toluene"].fix(0.5)
    
        # Set Flash unit specifications
        m.fs.flash.heat_duty.fix(0)
        m.fs.flash.deltaP.fix(0)
    
        # Fix NRTL specific variables
        # alpha values (set at 0.3)
        m.fs.properties.\
            alpha["benzene", "benzene"].fix(0)
        m.fs.properties.\
            alpha["benzene", "toluene"].fix(0.3)
        m.fs.properties.\
            alpha["toluene", "toluene"].fix(0)
        m.fs.properties.\
            alpha["toluene", "benzene"].fix(0.3)
    
        # initial tau values
        m.fs.properties.\
            tau["benzene", "benzene"].fix(0)
        m.fs.properties.\
            tau["benzene", "toluene"].fix(-0.9)
        m.fs.properties.\
            tau["toluene", "toluene"].fix(0)
        m.fs.properties.\
            tau["toluene", "benzene"].fix(1.4)
    
        # Initialize the flash unit
        m.fs.flash.initialize(outlvl=idaeslog.INFO_LOW)
    
        # Fix at actual temperature
        m.fs.flash.inlet.temperature.fix(float(data["temperature"]))
    
        # Set bounds on variables to be estimated
        m.fs.properties.\
            tau["benzene", "toluene"].setlb(-5)
        m.fs.properties.\
            tau["benzene", "toluene"].setub(5)
    
        m.fs.properties.\
            tau["toluene", "benzene"].setlb(-5)
        m.fs.properties.\
            tau["toluene", "benzene"].setub(5)
    
        # Return initialized flash model
        return m


Parameter estimation using parmest
----------------------------------

In addition to providing a method to return an initialized model, the
``parmest`` tool needs the following:

-  List of variable names to be estimated
-  Dataset with multiple scenarios
-  Expression to compute the sum of squared errors

In this example, we only estimate the binary interaction parameter
(``tau_ij``). Given that this variable is usually indexed as
``tau_ij = Var(component_list, component_list)``, there are 2*2=4
degrees of freedom. However, when i=j, the binary interaction parameter
is 0. Therefore, in this problem, we estimate the binary interaction
parameter for the following variables only:

-  fs.properties.tau[‘benzene’, ‘toluene’]
-  fs.properties.tau[‘toluene’, ‘benzene’]

.. raw:: html

   <div class="alert alert-block alert-info">

Inline Exercise: Create a list called ``variable_name`` with the
above-mentioned variables declared as strings.

.. raw:: html

   </div>

.. code:: ipython3

    # Todo: Create a list of vars to estimate
    variable_name = ["fs.properties.tau['benzene', 'toluene']",
                     "fs.properties.tau['toluene', 'benzene']"]


Pyomo’s ``parmest`` tool supports the following data formats: - pandas
dataframe - list of dictionaries - list of json file names.

Please see the documentation for more details.

For this example, we load data from the csv file
``BT_NRTL_dataset.csv``. The dataset consists of fifty data points which
provide the mole fraction of benzene in the vapor and liquid phase as a
function of temperature.

.. code:: ipython3

    # Load data from csv
    data = pd.read_csv('BT_NRTL_dataset.csv')
    
    # Display the dataset
    display(data)



.. raw:: html

    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }
    
        .dataframe tbody tr th {
            vertical-align: top;
        }
    
        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>temperature</th>
          <th>liq_benzene</th>
          <th>vap_benzene</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>0</th>
          <td>365.500000</td>
          <td>0.480953</td>
          <td>0.692110</td>
        </tr>
        <tr>
          <th>1</th>
          <td>365.617647</td>
          <td>0.462444</td>
          <td>0.667699</td>
        </tr>
        <tr>
          <th>2</th>
          <td>365.735294</td>
          <td>0.477984</td>
          <td>0.692441</td>
        </tr>
        <tr>
          <th>3</th>
          <td>365.852941</td>
          <td>0.440547</td>
          <td>0.640336</td>
        </tr>
        <tr>
          <th>4</th>
          <td>365.970588</td>
          <td>0.427421</td>
          <td>0.623328</td>
        </tr>
        <tr>
          <th>5</th>
          <td>366.088235</td>
          <td>0.442725</td>
          <td>0.647796</td>
        </tr>
        <tr>
          <th>6</th>
          <td>366.205882</td>
          <td>0.434374</td>
          <td>0.637691</td>
        </tr>
        <tr>
          <th>7</th>
          <td>366.323529</td>
          <td>0.444642</td>
          <td>0.654933</td>
        </tr>
        <tr>
          <th>8</th>
          <td>366.441176</td>
          <td>0.427132</td>
          <td>0.631229</td>
        </tr>
        <tr>
          <th>9</th>
          <td>366.558824</td>
          <td>0.446301</td>
          <td>0.661743</td>
        </tr>
        <tr>
          <th>10</th>
          <td>366.676471</td>
          <td>0.438004</td>
          <td>0.651591</td>
        </tr>
        <tr>
          <th>11</th>
          <td>366.794118</td>
          <td>0.425320</td>
          <td>0.634814</td>
        </tr>
        <tr>
          <th>12</th>
          <td>366.911765</td>
          <td>0.439435</td>
          <td>0.658047</td>
        </tr>
        <tr>
          <th>13</th>
          <td>367.029412</td>
          <td>0.435655</td>
          <td>0.654539</td>
        </tr>
        <tr>
          <th>14</th>
          <td>367.147059</td>
          <td>0.401350</td>
          <td>0.604987</td>
        </tr>
        <tr>
          <th>15</th>
          <td>367.264706</td>
          <td>0.397862</td>
          <td>0.601703</td>
        </tr>
        <tr>
          <th>16</th>
          <td>367.382353</td>
          <td>0.415821</td>
          <td>0.630930</td>
        </tr>
        <tr>
          <th>17</th>
          <td>367.500000</td>
          <td>0.420667</td>
          <td>0.640380</td>
        </tr>
        <tr>
          <th>18</th>
          <td>367.617647</td>
          <td>0.391683</td>
          <td>0.598214</td>
        </tr>
        <tr>
          <th>19</th>
          <td>367.735294</td>
          <td>0.404903</td>
          <td>0.620432</td>
        </tr>
        <tr>
          <th>20</th>
          <td>367.852941</td>
          <td>0.409563</td>
          <td>0.629626</td>
        </tr>
        <tr>
          <th>21</th>
          <td>367.970588</td>
          <td>0.389488</td>
          <td>0.600722</td>
        </tr>
        <tr>
          <th>22</th>
          <td>368.000000</td>
          <td>0.396789</td>
          <td>0.612483</td>
        </tr>
        <tr>
          <th>23</th>
          <td>368.088235</td>
          <td>0.398162</td>
          <td>0.616106</td>
        </tr>
        <tr>
          <th>24</th>
          <td>368.205882</td>
          <td>0.362340</td>
          <td>0.562505</td>
        </tr>
        <tr>
          <th>25</th>
          <td>368.323529</td>
          <td>0.386958</td>
          <td>0.602680</td>
        </tr>
        <tr>
          <th>26</th>
          <td>368.441176</td>
          <td>0.363643</td>
          <td>0.568210</td>
        </tr>
        <tr>
          <th>27</th>
          <td>368.558824</td>
          <td>0.368118</td>
          <td>0.577072</td>
        </tr>
        <tr>
          <th>28</th>
          <td>368.676471</td>
          <td>0.384098</td>
          <td>0.604078</td>
        </tr>
        <tr>
          <th>29</th>
          <td>368.794118</td>
          <td>0.353605</td>
          <td>0.557925</td>
        </tr>
        <tr>
          <th>30</th>
          <td>368.911765</td>
          <td>0.346474</td>
          <td>0.548445</td>
        </tr>
        <tr>
          <th>31</th>
          <td>369.029412</td>
          <td>0.350741</td>
          <td>0.556996</td>
        </tr>
        <tr>
          <th>32</th>
          <td>369.147059</td>
          <td>0.362347</td>
          <td>0.577286</td>
        </tr>
        <tr>
          <th>33</th>
          <td>369.264706</td>
          <td>0.362578</td>
          <td>0.579519</td>
        </tr>
        <tr>
          <th>34</th>
          <td>369.382353</td>
          <td>0.340765</td>
          <td>0.546411</td>
        </tr>
        <tr>
          <th>35</th>
          <td>369.500000</td>
          <td>0.337462</td>
          <td>0.542857</td>
        </tr>
        <tr>
          <th>36</th>
          <td>369.617647</td>
          <td>0.355729</td>
          <td>0.574083</td>
        </tr>
        <tr>
          <th>37</th>
          <td>369.735294</td>
          <td>0.348679</td>
          <td>0.564513</td>
        </tr>
        <tr>
          <th>38</th>
          <td>369.852941</td>
          <td>0.338187</td>
          <td>0.549284</td>
        </tr>
        <tr>
          <th>39</th>
          <td>369.970588</td>
          <td>0.324360</td>
          <td>0.528514</td>
        </tr>
        <tr>
          <th>40</th>
          <td>370.088235</td>
          <td>0.310753</td>
          <td>0.507964</td>
        </tr>
        <tr>
          <th>41</th>
          <td>370.205882</td>
          <td>0.311037</td>
          <td>0.510055</td>
        </tr>
        <tr>
          <th>42</th>
          <td>370.323529</td>
          <td>0.311263</td>
          <td>0.512055</td>
        </tr>
        <tr>
          <th>43</th>
          <td>370.441176</td>
          <td>0.308081</td>
          <td>0.508437</td>
        </tr>
        <tr>
          <th>44</th>
          <td>370.558824</td>
          <td>0.308224</td>
          <td>0.510293</td>
        </tr>
        <tr>
          <th>45</th>
          <td>370.676471</td>
          <td>0.318148</td>
          <td>0.528399</td>
        </tr>
        <tr>
          <th>46</th>
          <td>370.794118</td>
          <td>0.308334</td>
          <td>0.513728</td>
        </tr>
        <tr>
          <th>47</th>
          <td>370.911765</td>
          <td>0.317937</td>
          <td>0.531410</td>
        </tr>
        <tr>
          <th>48</th>
          <td>371.029412</td>
          <td>0.289149</td>
          <td>0.484824</td>
        </tr>
        <tr>
          <th>49</th>
          <td>371.147059</td>
          <td>0.298637</td>
          <td>0.502318</td>
        </tr>
      </tbody>
    </table>
    </div>


We need to provide a method to return an expression to compute the sum
of squared errors that will be used as the objective in solving the
parameter estimation problem. For this problem, the error will be
computed for the mole fraction of benzene in the vapor and liquid phase
between the model prediction and data.

.. raw:: html

   <div class="alert alert-block alert-info">

Inline Exercise: Complete the following cell by adding an expression to
compute the sum of square errors.

.. raw:: html

   </div>

.. code:: ipython3

    # Create method to return an expression that computes the sum of squared error
    def SSE(m, data):
        # Todo: Add expression for computing the sum of squared errors in mole fraction of benzene in the liquid
        # and vapor phase. For example, the squared error for the vapor phase is:
        # (float(data["vap_benzene"]) - m.fs.flash.vap_outlet.mole_frac_comp[0, "benzene"])**2
        expr = ((float(data["vap_benzene"]) -
                 m.fs.flash.vap_outlet.mole_frac_comp[0, "benzene"])**2 +
                (float(data["liq_benzene"]) -
                 m.fs.flash.liq_outlet.mole_frac_comp[0, "benzene"])**2)
        return expr*1E4

.. raw:: html

   <div class="alert alert-block alert-warning">

Note: Notice that we have scaled the expression up by a factor of 10000
as the SSE computed here will be an extremely small number given that we
are using the difference in mole fraction in our expression. A
well-scaled objective will help improve solve robustness when using
IPOPT.

.. raw:: html

   </div>

We are now ready to set up the parameter estimation problem. We will
create a parameter estimation object called ``pest``. As shown below, we
pass the method that returns an initialized model, dataset, list of
variable names to estimate, and the SSE expression to the Estimator
object. ``tee=True`` will print the solver output after solving the
parameter estimation problem.

.. code:: ipython3

    # Initialize a parameter estimation object
    pest = parmest.Estimator(NRTL_model, data, variable_name, SSE, tee=True)
    
    # Run parameter estimation using all data
    obj_value, parameters = pest.theta_est()


.. parsed-literal::

    Ipopt 3.13.2: 
    
    ******************************************************************************
    This program contains Ipopt, a library for large-scale nonlinear optimization.
     Ipopt is released as open source code under the Eclipse Public License (EPL).
             For more information visit http://projects.coin-or.org/Ipopt
    
    This version of Ipopt was compiled from source code available at
        https://github.com/IDAES/Ipopt as part of the Institute for the Design of
        Advanced Energy Systems Process Systems Engineering Framework (IDAES PSE
        Framework) Copyright (c) 2018-2019. See https://github.com/IDAES/idaes-pse.
    
    This version of Ipopt was compiled using HSL, a collection of Fortran codes
        for large-scale scientific computation.  All technical papers, sales and
        publicity material resulting from use of the HSL codes within IPOPT must
        contain the following acknowledgement:
            HSL, a collection of Fortran codes for large-scale scientific
            computation. See http://www.hsl.rl.ac.uk.
    ******************************************************************************
    
    This is Ipopt version 3.13.2, running with linear solver ma27.
    
    Number of nonzeros in equality constraint Jacobian...:    10950
    Number of nonzeros in inequality constraint Jacobian.:        0
    Number of nonzeros in Lagrangian Hessian.............:     6000
    
    Total number of variables............................:     2952
                         variables with only lower bounds:      150
                    variables with lower and upper bounds:      600
                         variables with only upper bounds:        0
    Total number of equality constraints.................:     2950
    Total number of inequality constraints...............:        0
            inequality constraints with only lower bounds:        0
       inequality constraints with lower and upper bounds:        0
            inequality constraints with only upper bounds:        0
    
    iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
       0  6.0671019e+01 5.63e+02 1.08e-04  -1.0 0.00e+00    -  0.00e+00 0.00e+00   0
       1  5.0339335e+00 1.57e+03 7.47e+01  -1.0 1.37e+04    -  9.45e-01 1.00e+00h  1
       2  5.1535704e+00 1.93e+02 4.59e+02  -1.0 5.54e+02  -4.0 9.90e-01 1.00e+00h  1
       3  5.1392848e+00 1.07e+00 3.40e+01  -1.0 6.17e+01  -4.5 9.92e-01 1.00e+00h  1
       4  5.1359488e+00 3.65e+02 2.24e+01  -1.0 8.41e+02    -  1.00e+00 1.00e+00h  1
       5  5.1198699e+00 1.64e+00 1.32e-01  -1.0 3.65e+02    -  1.00e+00 1.00e+00h  1
       6  5.0735545e+00 1.54e+02 1.83e-01  -2.5 3.80e+02    -  9.96e-01 1.00e+00h  1
       7  5.0752210e+00 1.03e+01 5.00e-02  -2.5 9.51e+01    -  1.00e+00 1.00e+00h  1
       8  5.0750012e+00 5.57e-03 2.07e-05  -2.5 2.09e-01    -  1.00e+00 1.00e+00h  1
       9  5.0749679e+00 5.85e-02 7.21e-04  -3.8 8.43e+00    -  1.00e+00 1.00e+00h  1
    iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
      10  5.0749686e+00 5.59e-04 1.05e-05  -5.7 9.63e-01    -  1.00e+00 1.00e+00h  1
      11  5.0749686e+00 3.99e-08 1.56e-09  -8.6 7.56e-03    -  1.00e+00 1.00e+00h  1
    
    Number of Iterations....: 11
    
                                       (scaled)                 (unscaled)
    Objective...............:   5.0749685783044711e+00    5.0749685783044711e+00
    Dual infeasibility......:   1.5648773281580123e-09    1.5648773281580123e-09
    Constraint violation....:   1.3858805184802086e-10    3.9901351556181908e-08
    Complementarity.........:   2.5074825419995357e-09    2.5074825419995357e-09
    Overall NLP error.......:   2.5074825419995357e-09    3.9901351556181908e-08
    
    
    Number of objective function evaluations             = 12
    Number of objective gradient evaluations             = 12
    Number of equality constraint evaluations            = 12
    Number of inequality constraint evaluations          = 0
    Number of equality constraint Jacobian evaluations   = 12
    Number of inequality constraint Jacobian evaluations = 0
    Number of Lagrangian Hessian evaluations             = 11
    Total CPU secs in IPOPT (w/o function evaluations)   =      0.034
    Total CPU secs in NLP function evaluations           =      0.029
    
    EXIT: Optimal Solution Found.
    

You will notice that the resulting parameter estimation problem, when
using the flash unit model, will have 2952 variables and 2950
constraints. This is because the unit models in IDAES use control volume
blocks which have two state blocks attached; one at the inlet and one at
the outlet. Even though there are two state blocks, they still use the
same parameter block i.e. ``m.fs.properties`` in our example which is
where our parameters that need to be estimated exist.

Let us display the results by running the next cell.

.. code:: ipython3

    print("The SSE at the optimal solution is %0.6f" % (obj_value*1e-4))
    print()
    print("The values for the parameters are as follows:")
    for k,v in parameters.items():
        print(k, "=", v)


.. parsed-literal::

    The SSE at the optimal solution is 0.000507
    
    The values for the parameters are as follows:
    fs.properties.tau[benzene,toluene] = -0.8987624039723711
    fs.properties.tau[toluene,benzene] = 1.410486110660447


Using the data that was provided, we have estimated the binary
interaction parameters in the NRTL model for a benzene-toluene mixture.
Although the dataset that was provided was temperature dependent, in
this example we have estimated a single value that fits best for all
temperatures.

Advanced options for parmest: bootstrapping
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Pyomo’s ``parmest`` tool allows for bootstrapping where the parameter
estimation is repeated over ``n`` samples with resampling from the
original data set. Parameter estimation with bootstrap resampling can be
used to identify confidence regions around each parameter estimate. This
analysis can be slow given the increased number of model instances that
need to be solved. In the following cell, we run the parameter
estimation with 10 bootstrap samples from the given dataset. We then
plot the parameter estimates along with an confidence regions using
rectangular and multivariate normal distributions.

.. code:: ipython3

    # Run parameter estimation using bootstrap resample of the data (10 samples),
    # plot results along with confidence regions
    bootstrap_theta = pest.theta_est_bootstrap(4)


.. parsed-literal::

    Ipopt 3.13.2: 
    
    ******************************************************************************
    This program contains Ipopt, a library for large-scale nonlinear optimization.
     Ipopt is released as open source code under the Eclipse Public License (EPL).
             For more information visit http://projects.coin-or.org/Ipopt
    
    This version of Ipopt was compiled from source code available at
        https://github.com/IDAES/Ipopt as part of the Institute for the Design of
        Advanced Energy Systems Process Systems Engineering Framework (IDAES PSE
        Framework) Copyright (c) 2018-2019. See https://github.com/IDAES/idaes-pse.
    
    This version of Ipopt was compiled using HSL, a collection of Fortran codes
        for large-scale scientific computation.  All technical papers, sales and
        publicity material resulting from use of the HSL codes within IPOPT must
        contain the following acknowledgement:
            HSL, a collection of Fortran codes for large-scale scientific
            computation. See http://www.hsl.rl.ac.uk.
    ******************************************************************************
    
    This is Ipopt version 3.13.2, running with linear solver ma27.
    
    Number of nonzeros in equality constraint Jacobian...:    10950
    Number of nonzeros in inequality constraint Jacobian.:        0
    Number of nonzeros in Lagrangian Hessian.............:     6000
    
    Total number of variables............................:     2952
                         variables with only lower bounds:      150
                    variables with lower and upper bounds:      600
                         variables with only upper bounds:        0
    Total number of equality constraints.................:     2950
    Total number of inequality constraints...............:        0
            inequality constraints with only lower bounds:        0
       inequality constraints with lower and upper bounds:        0
            inequality constraints with only upper bounds:        0
    
    iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
       0  5.6025828e+01 5.41e+02 1.38e-04  -1.0 0.00e+00    -  0.00e+00 0.00e+00   0
       1  4.0223114e+00 1.56e+03 7.06e+01  -1.0 1.32e+04    -  9.51e-01 1.00e+00h  1
       2  4.2528399e+00 2.77e+02 3.57e+02  -1.0 2.84e+02  -4.0 9.90e-01 1.00e+00h  1
       3  4.2290450e+00 2.22e+00 3.11e+01  -1.0 1.53e+01  -4.5 9.92e-01 1.00e+00h  1
       4  4.2889032e+00 9.79e+01 2.16e+00  -1.0 4.23e+02    -  1.00e+00 1.00e+00h  1
       5  4.2647452e+00 4.10e+00 1.24e-02  -1.0 8.46e+01    -  1.00e+00 1.00e+00h  1
       6  4.2258236e+00 1.11e+02 5.69e-02  -2.5 3.65e+02    -  1.00e+00 1.00e+00h  1
       7  4.2251803e+00 1.52e+00 1.04e-03  -2.5 2.31e+01    -  1.00e+00 1.00e+00h  1
       8  4.2251023e+00 4.59e-02 2.48e-05  -3.8 8.86e+00    -  1.00e+00 1.00e+00h  1
       9  4.2251020e+00 1.43e-04 7.71e-08  -5.7 4.87e-01    -  1.00e+00 1.00e+00h  1
    iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
      10  4.2251020e+00 2.36e-08 1.29e-11  -8.6 6.14e-03    -  1.00e+00 1.00e+00h  1
    
    Number of Iterations....: 10
    
                                       (scaled)                 (unscaled)
    Objective...............:   4.2251020098709047e+00    4.2251020098709047e+00
    Dual infeasibility......:   1.2865597476263702e-11    1.2865597476263702e-11
    Constraint violation....:   8.2141239489483906e-11    2.3632310330867771e-08
    Complementarity.........:   2.5071646607729675e-09    2.5071646607729675e-09
    Overall NLP error.......:   2.5071646607729675e-09    2.3632310330867771e-08
    
    
    Number of objective function evaluations             = 11
    Number of objective gradient evaluations             = 11
    Number of equality constraint evaluations            = 11
    Number of inequality constraint evaluations          = 0
    Number of equality constraint Jacobian evaluations   = 11
    Number of inequality constraint Jacobian evaluations = 0
    Number of Lagrangian Hessian evaluations             = 10
    Total CPU secs in IPOPT (w/o function evaluations)   =      0.030
    Total CPU secs in NLP function evaluations           =      0.025
    
    EXIT: Optimal Solution Found.
    Ipopt 3.13.2: 
    
    ******************************************************************************
    This program contains Ipopt, a library for large-scale nonlinear optimization.
     Ipopt is released as open source code under the Eclipse Public License (EPL).
             For more information visit http://projects.coin-or.org/Ipopt
    
    This version of Ipopt was compiled from source code available at
        https://github.com/IDAES/Ipopt as part of the Institute for the Design of
        Advanced Energy Systems Process Systems Engineering Framework (IDAES PSE
        Framework) Copyright (c) 2018-2019. See https://github.com/IDAES/idaes-pse.
    
    This version of Ipopt was compiled using HSL, a collection of Fortran codes
        for large-scale scientific computation.  All technical papers, sales and
        publicity material resulting from use of the HSL codes within IPOPT must
        contain the following acknowledgement:
            HSL, a collection of Fortran codes for large-scale scientific
            computation. See http://www.hsl.rl.ac.uk.
    ******************************************************************************
    
    This is Ipopt version 3.13.2, running with linear solver ma27.
    
    Number of nonzeros in equality constraint Jacobian...:    10950
    Number of nonzeros in inequality constraint Jacobian.:        0
    Number of nonzeros in Lagrangian Hessian.............:     6000
    
    Total number of variables............................:     2952
                         variables with only lower bounds:      150
                    variables with lower and upper bounds:      600
                         variables with only upper bounds:        0
    Total number of equality constraints.................:     2950
    Total number of inequality constraints...............:        0
            inequality constraints with only lower bounds:        0
       inequality constraints with lower and upper bounds:        0
            inequality constraints with only upper bounds:        0
    
    iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
       0  5.2627227e+01 4.99e+02 1.35e-04  -1.0 0.00e+00    -  0.00e+00 0.00e+00   0
       1  4.6147127e+00 1.27e+03 5.82e+01  -1.0 1.22e+04    -  9.58e-01 1.00e+00h  1
       2  4.6721331e+00 8.40e+01 2.24e+02  -1.0 3.73e+02  -4.0 9.90e-01 1.00e+00h  1
       3  4.6707400e+00 3.43e-01 1.33e+01  -1.0 2.93e+00  -4.5 9.92e-01 1.00e+00h  1
       4  4.7108488e+00 6.63e+01 3.55e-01  -1.0 9.13e+01    -  1.00e+00 1.00e+00h  1
       5  4.6664284e+00 6.14e+01 3.05e-02  -1.7 7.24e+01    -  1.00e+00 1.00e+00h  1
       6  4.6668467e+00 4.83e-01 3.13e-04  -1.7 3.55e+00    -  1.00e+00 1.00e+00h  1
       7  4.6652380e+00 2.73e+00 1.44e-03  -3.8 1.59e+01    -  1.00e+00 1.00e+00h  1
       8  4.6652259e+00 7.09e-04 4.73e-07  -3.8 1.21e-01    -  1.00e+00 1.00e+00h  1
       9  4.6652258e+00 1.43e-04 7.68e-08  -5.7 1.17e-01    -  1.00e+00 1.00e+00h  1
    iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
      10  4.6652258e+00 2.16e-08 1.16e-11  -8.6 1.45e-03    -  1.00e+00 1.00e+00h  1
    
    Number of Iterations....: 10
    
                                       (scaled)                 (unscaled)
    Objective...............:   4.6652258076581310e+00    4.6652258076581310e+00
    Dual infeasibility......:   1.1614532252623988e-11    1.1614532252623988e-11
    Constraint violation....:   7.5060098154183560e-11    2.1595042198896408e-08
    Complementarity.........:   2.5071533912857538e-09    2.5071533912857538e-09
    Overall NLP error.......:   2.5071533912857538e-09    2.1595042198896408e-08
    
    
    Number of objective function evaluations             = 11
    Number of objective gradient evaluations             = 11
    Number of equality constraint evaluations            = 11
    Number of inequality constraint evaluations          = 0
    Number of equality constraint Jacobian evaluations   = 11
    Number of inequality constraint Jacobian evaluations = 0
    Number of Lagrangian Hessian evaluations             = 10
    Total CPU secs in IPOPT (w/o function evaluations)   =      0.030
    Total CPU secs in NLP function evaluations           =      0.025
    
    EXIT: Optimal Solution Found.
    Ipopt 3.13.2: 
    
    ******************************************************************************
    This program contains Ipopt, a library for large-scale nonlinear optimization.
     Ipopt is released as open source code under the Eclipse Public License (EPL).
             For more information visit http://projects.coin-or.org/Ipopt
    
    This version of Ipopt was compiled from source code available at
        https://github.com/IDAES/Ipopt as part of the Institute for the Design of
        Advanced Energy Systems Process Systems Engineering Framework (IDAES PSE
        Framework) Copyright (c) 2018-2019. See https://github.com/IDAES/idaes-pse.
    
    This version of Ipopt was compiled using HSL, a collection of Fortran codes
        for large-scale scientific computation.  All technical papers, sales and
        publicity material resulting from use of the HSL codes within IPOPT must
        contain the following acknowledgement:
            HSL, a collection of Fortran codes for large-scale scientific
            computation. See http://www.hsl.rl.ac.uk.
    ******************************************************************************
    
    This is Ipopt version 3.13.2, running with linear solver ma27.
    
    Number of nonzeros in equality constraint Jacobian...:    10950
    Number of nonzeros in inequality constraint Jacobian.:        0
    Number of nonzeros in Lagrangian Hessian.............:     6000
    
    Total number of variables............................:     2952
                         variables with only lower bounds:      150
                    variables with lower and upper bounds:      600
                         variables with only upper bounds:        0
    Total number of equality constraints.................:     2950
    Total number of inequality constraints...............:        0
            inequality constraints with only lower bounds:        0
       inequality constraints with lower and upper bounds:        0
            inequality constraints with only upper bounds:        0
    
    iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
       0  6.3446613e+01 5.63e+02 1.10e-04  -1.0 0.00e+00    -  0.00e+00 0.00e+00   0
       1  5.7205626e+00 1.60e+03 7.65e+01  -1.0 1.37e+04    -  9.40e-01 1.00e+00h  1
       2  5.9239882e+00 2.33e+02 7.56e+02  -1.0 7.88e+02  -4.0 9.90e-01 1.00e+00h  1
       3  5.8628533e+00 1.37e+00 5.84e+01  -1.0 3.71e+02  -4.5 9.92e-01 1.00e+00h  1
       4  5.9426675e+00 5.29e+02 3.09e+02  -1.0 1.46e+03    -  1.00e+00 1.00e+00F  1
       5  5.8403494e+00 5.70e+01 1.55e+00  -1.0 6.65e+01    -  1.00e+00 1.00e+00h  1
       6  5.7802386e+00 3.77e+01 8.17e-02  -1.0 2.48e+02    -  1.00e+00 1.00e+00h  1
       7  5.7312028e+00 2.12e+02 1.64e-01  -2.5 4.01e+02    -  9.91e-01 1.00e+00h  1
       8  5.7321468e+00 1.58e+01 5.17e-02  -2.5 9.97e+01    -  1.00e+00 1.00e+00h  1
       9  5.7317575e+00 5.87e-03 1.80e-02  -2.5 1.80e+00    -  1.00e+00 1.00e+00h  1
    iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
      10  5.7317320e+00 1.76e-02 9.12e-03  -3.8 3.09e+00    -  1.00e+00 1.00e+00h  1
      11  5.7317275e+00 8.36e-03 4.27e-03  -3.8 3.68e+00    -  1.00e+00 1.00e+00h  1
      12  5.7317285e+00 6.56e-04 3.48e-04  -3.8 1.06e+00    -  1.00e+00 1.00e+00h  1
      13  5.7317285e+00 2.31e-04 1.47e-05  -5.7 4.87e-01    -  1.00e+00 1.00e+00h  1
      14  5.7317285e+00 7.64e-08 9.85e-09  -8.6 9.77e-03    -  1.00e+00 1.00e+00h  1
    
    Number of Iterations....: 14
    
                                       (scaled)                 (unscaled)
    Objective...............:   5.7317284717525014e+00    5.7317284717525014e+00
    Dual infeasibility......:   9.8460646866596613e-09    9.8460646866596613e-09
    Constraint violation....:   2.6544164091182976e-10    7.6383003033697605e-08
    Complementarity.........:   2.5079838020406796e-09    2.5079838020406796e-09
    Overall NLP error.......:   9.8460646866596613e-09    7.6383003033697605e-08
    
    
    Number of objective function evaluations             = 16
    Number of objective gradient evaluations             = 15
    Number of equality constraint evaluations            = 16
    Number of inequality constraint evaluations          = 0
    Number of equality constraint Jacobian evaluations   = 15
    Number of inequality constraint Jacobian evaluations = 0
    Number of Lagrangian Hessian evaluations             = 14
    Total CPU secs in IPOPT (w/o function evaluations)   =      0.038
    Total CPU secs in NLP function evaluations           =      0.034
    
    EXIT: Optimal Solution Found.
    Ipopt 3.13.2: 
    
    ******************************************************************************
    This program contains Ipopt, a library for large-scale nonlinear optimization.
     Ipopt is released as open source code under the Eclipse Public License (EPL).
             For more information visit http://projects.coin-or.org/Ipopt
    
    This version of Ipopt was compiled from source code available at
        https://github.com/IDAES/Ipopt as part of the Institute for the Design of
        Advanced Energy Systems Process Systems Engineering Framework (IDAES PSE
        Framework) Copyright (c) 2018-2019. See https://github.com/IDAES/idaes-pse.
    
    This version of Ipopt was compiled using HSL, a collection of Fortran codes
        for large-scale scientific computation.  All technical papers, sales and
        publicity material resulting from use of the HSL codes within IPOPT must
        contain the following acknowledgement:
            HSL, a collection of Fortran codes for large-scale scientific
            computation. See http://www.hsl.rl.ac.uk.
    ******************************************************************************
    
    This is Ipopt version 3.13.2, running with linear solver ma27.
    
    Number of nonzeros in equality constraint Jacobian...:    10950
    Number of nonzeros in inequality constraint Jacobian.:        0
    Number of nonzeros in Lagrangian Hessian.............:     6000
    
    Total number of variables............................:     2952
                         variables with only lower bounds:      150
                    variables with lower and upper bounds:      600
                         variables with only upper bounds:        0
    Total number of equality constraints.................:     2950
    Total number of inequality constraints...............:        0
            inequality constraints with only lower bounds:        0
       inequality constraints with lower and upper bounds:        0
            inequality constraints with only upper bounds:        0
    
    iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
       0  6.8359726e+01 5.41e+02 8.68e-05  -1.0 0.00e+00    -  0.00e+00 0.00e+00   0
       1  5.0236638e+00 1.49e+03 7.40e+01  -1.0 1.32e+04    -  9.38e-01 1.00e+00h  1
       2  5.1887954e+00 2.95e+02 4.23e+02  -1.0 3.42e+02  -4.0 9.90e-01 1.00e+00h  1
       3  5.1767810e+00 2.80e+00 3.91e+01  -1.0 1.63e+01  -4.5 9.92e-01 1.00e+00h  1
       4  5.2347133e+00 2.64e+02 4.07e+00  -1.0 7.72e+02    -  1.00e+00 1.00e+00h  1
       5  5.1683263e+00 1.95e+01 1.42e-01  -1.0 9.51e+01    -  1.00e+00 1.00e+00h  1
       6  5.1427360e+00 6.92e+01 8.40e-02  -2.5 3.92e+02    -  1.00e+00 1.00e+00h  1
       7  5.1425115e+00 5.58e-01 4.02e-04  -2.5 1.32e+01    -  1.00e+00 1.00e+00h  1
       8  5.1424614e+00 5.20e-02 3.58e-05  -3.8 8.89e+00    -  1.00e+00 1.00e+00h  1
       9  5.1424611e+00 1.50e-04 1.04e-07  -5.7 4.86e-01    -  1.00e+00 1.00e+00h  1
    iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
      10  5.1424611e+00 2.46e-08 1.72e-11  -8.6 6.11e-03    -  1.00e+00 1.00e+00h  1
    
    Number of Iterations....: 10
    
                                       (scaled)                 (unscaled)
    Objective...............:   5.1424611280515329e+00    5.1424611280515329e+00
    Dual infeasibility......:   1.7155721288020231e-11    1.7155721288020231e-11
    Constraint violation....:   8.5479491833268347e-11    2.4621840566396713e-08
    Complementarity.........:   2.5071890471738845e-09    2.5071890471738845e-09
    Overall NLP error.......:   2.5071890471738845e-09    2.4621840566396713e-08
    
    
    Number of objective function evaluations             = 11
    Number of objective gradient evaluations             = 11
    Number of equality constraint evaluations            = 11
    Number of inequality constraint evaluations          = 0
    Number of equality constraint Jacobian evaluations   = 11
    Number of inequality constraint Jacobian evaluations = 0
    Number of Lagrangian Hessian evaluations             = 10
    Total CPU secs in IPOPT (w/o function evaluations)   =      0.030
    Total CPU secs in NLP function evaluations           =      0.025
    
    EXIT: Optimal Solution Found.
    

.. code:: ipython3

    display(bootstrap_theta)



.. raw:: html

    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }
    
        .dataframe tbody tr th {
            vertical-align: top;
        }
    
        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>fs.properties.tau[benzene,toluene]</th>
          <th>fs.properties.tau[toluene,benzene]</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>0</th>
          <td>-0.931121</td>
          <td>1.497550</td>
        </tr>
        <tr>
          <th>1</th>
          <td>-0.969157</td>
          <td>1.569786</td>
        </tr>
        <tr>
          <th>2</th>
          <td>-0.846721</td>
          <td>1.311282</td>
        </tr>
        <tr>
          <th>3</th>
          <td>-0.929277</td>
          <td>1.486670</td>
        </tr>
      </tbody>
    </table>
    </div>


